# Module-2

./: EXERCISES.md  README.md  pyproject.toml
exercises/: exercise_1.py  exercise_2.py  exercise_3.py  exercise_4.py
solutions/: exercise_1.py  exercise_2.py  exercise_3.py  exercise_4.py
